changed some text

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <title>Hello!</title>
+        <title>Hello world!</title>
     </head>
     <body style = "text-align: center">
             <h1 > Welcome to my test</h1>
-            Hello, world!
+            Hello, my name is ila!
     </body>
  </html>
