--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <tittle>Hello!</tittle>
+        <title>Hello!</title>
     </head>
     <body>
+            <h1> Welcome to my test</h1>
             Hello, world!
     </body>
-
-
-
-
-
  </html>
