--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Hello!</title>
     </head>
-    <body>
-            <h1> Welcome to my test</h1>
+    <body text-align: center>
+            <h1 > Welcome to my test</h1>
             Hello, world!
     </body>
  </html>
