--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Hello!</title>
     </head>
-    <body text-align: center>
+    <body style = "text-align: center">
             <h1 > Welcome to my test</h1>
             Hello, world!
     </body>
